--- a/index.html
+++ b/index.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 	
+	<form class="movieSearch" action="">
+	  <label for="Movies">OMDB Search: <input id="movieTitle" name="movieTitle" placeholder="enter title " type="text">
+	  <input type="submit" value="search"></label>
+	</form>
+
+	
 </body>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="app.js"></script>
+
 </html>
